Fixed collapse and layout

--- a/css/sfstats.css
+++ b/css/sfstats.css
@@ -14,7 +14,7 @@ body {
 }
 
 .tab-sfs {
-    width: 111.3px;
+    width: 144.6px;
 }
 
 .navbar-title {
